# crc-store

./: Cargo.toml  README.md  rustfmt.toml
.zed/: settings.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_methods.rs  fuzz_rwsv.rs  rwsv.rs
fuzz/src/: lib.rs  method.rs  seek_from.rs  sequence.rs  setup.rs
src/: config.rs  crc32.rs  error.rs  lib.rs  main.rs  read.rs  seek.rs  store.rs  utility.rs  validate.rs  write.rs
src/crc_store/: error.rs  mod.rs  read.rs  seek.rs  store.rs  validate.rs  write.rs
src/crc_store/tests/: helpers.rs  lib.rs  test_read.rs  test_seek.rs  test_store.rs  test_validate.rs  test_write.rs
src/tests/: helpers.rs  lib.rs  test_is_valid_segment.rs  test_read.rs  test_seek.rs  test_store.rs  test_validate.rs  test_write.rs
