[package]
name = "crc-store-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4.0", features = ["arbitrary-derive"] }

[dependencies.crc-store]
path = ".."
features = []

[[bin]]
name = "fuzz_methods"
path = "fuzz_targets/fuzz_methods.rs"
test = false
doc = false
bench = false
