[package]
name = "crc-store-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4.0", features = ["arbitrary-derive"] }

[dependencies.crc-store]
path = ".."
features = []

[[bin]]
name = "rwsv"
path = "fuzz_targets/rwsv.rs"
test = false
doc = false
bench = false
